# sellix_rs

./: Cargo.toml  README.md
api/: Cargo.toml
api/examples/: blacklist_create.rs  blacklist_get.rs  blacklist_list.rs  blacklist_remove.rs  blacklist_update.rs  category_create.rs  category_get.rs  category_list.rs  category_remove.rs  category_update.rs  coupon_create.rs  coupon_get.rs  coupon_list.rs  coupon_remove.rs  coupon_update.rs  product_query_string.rs  whitelist_create.rs  whitelist_get.rs  whitelist_list.rs  whitelist_remove.rs  whitelist_update.rs
api/src/: api.rs  client.rs  lib.rs
api/src/models/: blacklist.rs  category.rs  events.rs  license.rs  mod.rs  payment.rs  subscription.rs  whitelist.rs
api/tests/: blacklist_create.rs  blacklist_get.rs  blacklist_list.rs  blacklist_remove.rs  blacklist_update.rs  category_create.rs  category_get.rs  category_list.rs  category_remove.rs  category_update.rs  coupon_create.rs  coupon_get.rs  coupon_list.rs  coupon_remove.rs  coupon_update.rs  product_query_string.rs  whitelist_create.rs  whitelist_get.rs  whitelist_list.rs  whitelist_remove.rs  whitelist_update.rs
api_models/: Cargo.toml
api_models/src/: blacklist.rs  category.rs  coupon.rs  customer.rs  dispute.rs  events.rs  feedback.rs  group.rs  invoice.rs  lib.rs  order.rs  payment.rs  product.rs  query.rs  subscription.rs  webhook.rs  whitelist.rs
macros/: Cargo.toml
macros/src/: lib.rs
