[package]
name = "sellix_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
strum = "0.24.1"
strum_macros = "0.24.3"
sellix_macros = { path = "../macros" }
sellix_api_models = { path = "../api_models" }
handlebars = "4.3.7"
serde_repr = "0.1.12"
serde_with = "3.0.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
