[package]
name = "sellix_api_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
serde_repr = "0.1.12"
serde_with = "3.0.0"
reqwest = { version = "0.11.18", features = ["json"] }
